example/anvil_out/governor/governor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: governor
spec:
  selector:
    app: governor
  ports:
    - name: http
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: governor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: governor
  template:
    metadata:
      labels:
        app: governor
    spec:
      serviceAccountName: governor
      containers:
        - name: governor
          image: docker.pkg.dev.localhost:8080/governor:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/healthz/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/healthz/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          volumeMounts:
            - name: config
              mountPath: /home/governor/config
            - name: templates
              mountPath: /home/governor/templates
      volumes:
        - name: config
          configMap:
            name: governor-config
        - name: templates
          configMap:
            name: governor-templates
